--- a/education.html
+++ b/education.html
@@ -144,14 +144,11 @@
         </div>
     </div>
 
-    <div class="bottom_container">
-        <a href="https://www.linkedin.com/in/agata-jacyk-486259219/"><i class="fab fa-linkedin"></i> linkedIn</a> <a
-            href="https://github.com/AgataJacyk"><i class="fab fa-github-square"></i> github </a> <a
-            href="mailto:agatajacyk.webdeveloper@gmail.com"><i class="far fa-envelope"></i> gmail </a>
-        <br>
-        <br>
-        <p><i class="far fa-copyright"></i> Copyrights Agata Jacyk</p>
-    </div>
+    <footer>
+        <div class="bottom_container">
+            <p><a><i class="far fa-copyright"> Copyrights Agata Jacyk</i></a></p>
+        </div>
+    </footer>
 </body>
 
 </html>
