--- a/index.html
+++ b/index.html
@@ -95,7 +95,8 @@
                 How my path to the place where I am today looked like made me aware and "who i am" a lot.
                 <br>Finally, I feel like I'm in the right place and I'm developing in a field that really interests me.
             </p>
-            <p>If you want to know anything about me, <a href="index.html#contact"><b>ask me</b></a>. Contact me is at the bottom of this page.</p>
+            <p>If you want to know anything about more, <a href="index.html#contact"><b>ask me</b></a>. Contact me is at
+                the bottom of this page.</p>
             <p class="text-end"><a href="education.html" target="blank">
                     More about my education
                 </a></p>
@@ -190,7 +191,7 @@
                             <p>Animal Shelter in Torun</p>
                         </div>
                     </div>
-                    <p class="text-end"><a href="index.html" target="blank">
+                    <p class="text-end"><a href="cv.html" target="blank">
                             My CV
                         </a></p>
                 </div>
@@ -204,14 +205,12 @@
             <div class="row">
                 <div class="col-lg-2 col-sm-6">
                     <img id="pencil_img" , src="images/pencil.png" ; alt="pencil"></div>
-                <div class="col-lg-10 col-sm-6">
-                    <p>Ever since I can remember, I've loved <a href="projects.html#digital_art"
-                            target="blank"><b>drawing</b></a>. As a little girl, I used to scribble everything
+                <div class="col-lg-10 col-sm-6 hobbies">
+                    <p>Ever since I can remember, I've loved drawing. As a little girl, I used to scribble everything
                         I could (seriously). My passion has developed over many years from <b>drawing, through
-                            various
-                            types
-                            of paints and other artistic materials</b>, to<a href="projects.html#digital_art"
-                            target="blank"><b>digital art</b></a>, which I started to develop
+                            various types of paints and other artistic materials</b>, to<a
+                            href="projects.html#digital_art" target="blank"><b>digital art</b></a>, which I started to
+                        develop
                         this year. for some time I studied the <b>art</b> of tattooing, which also contributed to my
                         sense
                         of aesthetics and taught me the correct composition in various forms.
@@ -220,10 +219,10 @@
                         forms of self-expression.</p>
                 </div>
 
-                <div class="col-lg-10 col-sm-6">
+                <div class="col-lg-10 col-sm-6 hobbies">
                     <p>I have already mentioned that <a href="https://github.com/AgataJacyk"
                             target="blank"><b>programming</b></a> was my passion but what was developing at the same
-                        time was writing. I've always had a vivid imagination full of ideas (and
+                        time was <b>writing</b>. I've always had a vivid <b>imagination</b> full of ideas (and
                         fortunately
                         there are still quite a few of them). I loved <b>creating</b> amazing stories of imaginary
                         characters, plots on which you could build a pretty good movie and describe their everyday
@@ -232,7 +231,7 @@
                         far too long essays. I thought about writing a book many times, but in the end I used the
                         opportunities provided by<a href="https://pl.wikipedia.org/wiki/Play_by_forum" target=""><b>PBF
                                 (play by forum)</b></a> forums to create long stories together with
-                        other people. By the way, it was thanks to these people that I started designing
+                        other <b>people</b>. By the way, it was thanks to these people that I started designing
                         websites
                         and
                         I gained the courage to show my works to others. I learned to accept constructive criticism
@@ -266,7 +265,7 @@
                         <br>Have a nice day!</p>
                     <img src="images/sign.png" class="left_align_img">
                 </div>
-                <div class="col-lg-3 col-sm-6">
+                <div class="col-lg-3 col-sm-6 contact">
                     <a href="https://www.linkedin.com/in/agata-jacyk-486259219/" target="blank">
                         <b>LinkedIn </b> <i class="fab fa-linkedin"></i> <br>
                         <a href="https://github.com/AgataJacyk" target="blank">
@@ -279,7 +278,7 @@
                             <b>(+48) 661-470-335</b> <i class="fas fa-phone-square"></i><br>
                         </a>
                 </div>
-                <div class="col-lg-4 col-sm-6">
+                <div class="col-lg-4 col-sm-6 contact">
                     <img class="contact_img" src="images/contact.png">
                 </div>
             </div>
@@ -291,7 +290,6 @@
     </div>
     <footer>
         <div class="bottom_container">
-            
             <p><a><i class="far fa-copyright"> Copyrights Agata Jacyk</i></a></p>
         </div>
     </footer>
