--- a/projects.html
+++ b/projects.html
@@ -104,19 +104,7 @@
             <div class="col-lg-2 col-md-3 col-sm-4"><a
                     href="https://www.canva.com/design/DAEobrMIrNc/q9Dh5XfoykZwXlaa5p41hg/view" target="blank"><img
                         class="mobile" src="images/bedtime.gif" alt="bedtime stories" /></a></div>
-            <div class="col-lg-2 col-md-3 col-sm-4"><a
-                    href="https://www.canva.com/design/DAEoC7E4glA/pzBHMINNiuidT5OIxEBDEw/view?utm_content=DAEoC7E4glA&utm_campaign=designshare&utm_medium=link&utm_source=sharebutton#1"
-                    target="blank"><img class="mobile" src="images/yoga.gif" alt="YogApp" /></a></div>
-            <div class="col-lg-2 col-md-3 col-sm-4"><a
-                    href="https://www.canva.com/design/DAEoC7E4glA/pzBHMINNiuidT5OIxEBDEw/view?utm_content=DAEoC7E4glA&utm_campaign=designshare&utm_medium=link&utm_source=sharebutton#1"
-                    target="blank"><img class="mobile" src="images/yoga.gif" alt="YogApp" /></a></div>
-            <div class="col-lg-2 col-md-3 col-sm-4"><a
-                    href="https://www.canva.com/design/DAEoC7E4glA/pzBHMINNiuidT5OIxEBDEw/view?utm_content=DAEoC7E4glA&utm_campaign=designshare&utm_medium=link&utm_source=sharebutton#1"
-                    target="blank"><img class="mobile" src="images/yoga.gif" alt="YogApp" /></a></div>
-            <div class="col-lg-2 col-md-3 col-sm-4"><a
-                    href="https://www.canva.com/design/DAEoC7E4glA/pzBHMINNiuidT5OIxEBDEw/view?utm_content=DAEoC7E4glA&utm_campaign=designshare&utm_medium=link&utm_source=sharebutton#1"
-                    target="blank"><img class="mobile" src="images/yoga.gif" alt="YogApp" /></a></div>
-        </div>
+        
         <h3 id="digital_art">Digital Art</h3>
         <div class="row">
             <div class="col-lg-3 col-md-4 col-sm-6"><a href="https://imgur.com/a/S6ZQzcV" target="blank"><img
@@ -138,15 +126,11 @@
     </div>
     </div>
     </div>
-    <div class="bottom_container">
-        <a href="https://www.linkedin.com/in/agata-jacyk-486259219/" target="blank"><i class="fab fa-linkedin"></i>
-            linkedIn</a> <a href="https://github.com/AgataJacyk" target="blank"><i class="fab fa-github-square"></i>
-            github </a> <a href="mailto:agatajacyk.webdeveloper@gmail.com" target="blank"><i
-                class="far fa-envelope"></i> gmail </a>
-        <br>
-        <br>
-        <p><i class="far fa-copyright"></i> Copyrights Agata Jacyk</p>
-    </div>
+    <footer>
+        <div class="bottom_container">
+            <p><a><i class="far fa-copyright"> Copyrights Agata Jacyk</i></a></p>
+        </div>
+    </footer>
 </body>
 
 </html>
