--- a/cv.html
+++ b/cv.html
@@ -113,6 +113,11 @@
                     <p>Programming in JavaScript - Bartłomiej Borowczyk</p>
                     <p>Complete Web & Mobile Designer in 2021: UI/UX, Figma, +more - Andrei Neagoie, Daniel Schifano</p>
                 </div>
+                <hr>
+                    <div>
+                    <b>other</b>
+                    <b>1 / 10 / 2021</b> <p>Class representative</p>
+                    </div>
             </div>
             <div class="col-8">
                 <div>
