--- a/cv.html
+++ b/cv.html
@@ -102,7 +102,7 @@
                     <p>WSB University in Gdansk - Informatics - Specialisation: Frontend Developer</p>
                     <b>1 / 09 / 2013 - 22 / 05 / 2016</b>
                     <p>IV Secondary School of Tadeusz Kościuszko in Toruń</p>
-                    </ hr>
+                    <hr>
                     <b>Programming Classes</b>
                     <p>Software Development Academy - Java from scratch</p>
                     <hr>
@@ -117,7 +117,8 @@
                     <div>
                     <b>other</b>
                         <br>
-                    <b>1 / 10 / 2021</b> <p>Class representative</p>
+                    <b>1 / 10 / 2021</b> 
+                        <p>Class representative</p>
                     </div>
             </div>
             <div class="col-8">
