--- a/projects.html
+++ b/projects.html
@@ -104,6 +104,9 @@
             <div class="col-lg-2 col-md-3 col-sm-4"><a
                     href="https://www.canva.com/design/DAEobrMIrNc/q9Dh5XfoykZwXlaa5p41hg/view" target="blank"><img
                         class="mobile" src="images/bedtime.gif" alt="bedtime stories" /></a></div>
+             <div class="col-lg-2 col-md-3 col-sm-4"><a
+                    href="https://www.canva.com/design/DAEteeYOktE/W6_rpGmJFauT6hvwfzwnCg/view" target="blank"><img
+                        class="mobile" src="images/dreamcatcher.gif" alt="Dream Catcher" /></a></div>
         
         <h3 id="digital_art">Digital Art</h3>
         <div class="row">
