--- a/cv.html
+++ b/cv.html
@@ -84,6 +84,8 @@
                     <p>agatajacyk.webdeveloper@gmail.com</p>
                     <b>LinkedIn</b>
                     <p>https://www.linkedin.com/in/agata-jacyk-486259219/"</p>
+                    <b>GitHub</b>
+                    <p>hhttps://github.com/AgataJacyk</p>
                 </div>
                 <hr>
                 <div>
