--- a/cv.html
+++ b/cv.html
@@ -49,6 +49,13 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                     <li class="nav-item">
+                        <a href="https://github.com/AgataJacyk"><i class="fab fa-github-square nav_git"></i></a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="https://www.linkedin.com/in/agata-jacyk-486259219/"><i
+                                class="fab fa-linkedin nav_linked"></i></a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="index.html#about_me">About Me</a>
                     </li>
                     <li class="nav-item">
@@ -85,19 +92,19 @@
                     <b>LinkedIn</b>
                     <p>https://www.linkedin.com/in/agata-jacyk-486259219/"</p>
                     <b>GitHub</b>
-                    <p>hhttps://github.com/AgataJacyk</p>
+                    <p>https://github.com/AgataJacyk</p>
                 </div>
                 <hr>
                 <div>
                     <b>Languages</b>
-                    
-                        <p>Polish ( native )</p>
-                        <p>English ( B1 / B2 )</p>
-                        <p>Korean ( A1 )</p>
-                    
+
+                    <p>Polish ( native )</p>
+                    <p>English ( B1 / B2 )</p>
+                    <p>Korean ( A1 )</p>
+
                 </div>
-                    <hr>
-                    <div>
+                <hr>
+                <div>
                     <b>education</b>
                     <br>
                     <b>21 / 03 / 2021</b>
@@ -116,12 +123,11 @@
                     <p>Complete Web & Mobile Designer in 2021: UI/UX, Figma, +more - Andrei Neagoie, Daniel Schifano</p>
                 </div>
                 <hr>
-                    <div>
+                <div>
                     <b>other</b>
-                        <br>
-                    <b>1 / 10 / 2021</b> 
-                        <p>Class representative</p>
-                    </div>
+                    <b>1 / 10 / 2021</b>
+                    <p>Class representative</p>
+                </div>
             </div>
             <div class="col-8">
                 <div>
@@ -219,7 +225,7 @@
                                 <td>
                                     <ul>
                                         <li>
-                                            preparation of the event "tattoos instead of fur" 
+                                            preparation of the event "tattoos instead of fur"
                                         </li>
                                         <li>
                                             numerous fundraisers such as "beer for the pet"
@@ -296,20 +302,20 @@
                                         </li>
                                     </ul>
                                 </td>
-                                </tr>
-                                </tbody>
-                                </table>
+                            </tr>
+                        </tbody>
+                    </table>
 
-                                <h2>other</h2>
-                                <p>
-                                    <ul>
-                                        <li>driving licence</li>
-                                        <li>communication</li>
-                                        <li>organisation </li>
-                                        <li>teamwork</li>
-                                        <li>i'm really good at googling and searching informations</li>
-                                    </ul>
-                                </p>
+                    <h2>other</h2>
+                    <p>
+                        <ul>
+                            <li>driving licence</li>
+                            <li>communication</li>
+                            <li>organisation </li>
+                            <li>teamwork</li>
+                            <li>i'm really good at googling and searching informations</li>
+                        </ul>
+                    </p>
                 </div>
                 <hr>
                 <div>
@@ -342,6 +348,9 @@
     </div>
     <footer>
         <div class="bottom_container">
+                <a href="https://github.com/AgataJacyk"><i class="fab fa-github-square nav_git"></i></a>
+                <a href="https://www.linkedin.com/in/agata-jacyk-486259219/"><i
+                        class="fab fa-linkedin nav_linked"></i></a>
             <p><a><i class="far fa-copyright">
                         Copyrights Agata Jacyk</i></a></p>
         </div>
