--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home Page - Agata Jacyk</title>
+    <title>Document</title>
 
     <!-- Styles Sheet -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -49,6 +49,13 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a href="https://github.com/AgataJacyk"><i class="fab fa-github-square nav_git"></i></a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="https://www.linkedin.com/in/agata-jacyk-486259219/"><i
+                                    class="fab fa-linkedin nav_linked"></i></a>
+                        </li>
                         <li class="nav-item">
                             <a class="nav-link" href="index.html#about_me">About Me</a>
                         </li>
@@ -290,7 +297,11 @@
     </div>
     <footer>
         <div class="bottom_container">
-            <p><a><i class="far fa-copyright"> Copyrights Agata Jacyk</i></a></p>
+                <a href="https://github.com/AgataJacyk"><i class="fab fa-github-square nav_git"></i></a>
+                <a href="https://www.linkedin.com/in/agata-jacyk-486259219/"><i
+                        class="fab fa-linkedin nav_linked"></i></a>
+            <p><a><i class="far fa-copyright">
+                        Copyrights Agata Jacyk</i></a></p>
         </div>
     </footer>
 </body>
