--- a/projects.html
+++ b/projects.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projects - Agata Jacyk</title>
+    <title>Document</title>
 
     <!-- Styles Sheet -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -48,6 +48,13 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a href="https://github.com/AgataJacyk"><i class="fab fa-github-square nav_git"></i></a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="https://www.linkedin.com/in/agata-jacyk-486259219/"><i
+                                class="fab fa-linkedin nav_linked"></i></a>
+                    </li>
                     <li class="nav-item">
                         <a class="nav-link" href="index.html#about_me">About Me</a>
                     </li>
@@ -104,34 +111,36 @@
             <div class="col-lg-2 col-md-3 col-sm-4"><a
                     href="https://www.canva.com/design/DAEobrMIrNc/q9Dh5XfoykZwXlaa5p41hg/view" target="blank"><img
                         class="mobile" src="images/bedtime.gif" alt="bedtime stories" /></a></div>
-             <div class="col-lg-2 col-md-3 col-sm-4"><a
-                    href="https://www.canva.com/design/DAEteeYOktE/W6_rpGmJFauT6hvwfzwnCg/view" target="blank"><img
-                        class="mobile" src="images/dreamcatcher.gif" alt="Dream Catcher" /></a></div>
         
         <h3 id="digital_art">Digital Art</h3>
         <div class="row">
-            <div class="col-lg-3 col-md-4 col-sm-6"><a href="https://imgur.com/a/S6ZQzcV" target="blank"><img
+            <div class="col-lg-3 col-md-4 col-sm-6"><a href="images/coven.png" target="blank"><img
+                class="projects_art" src="images/coven.png" alt="Coven" /></a></div>
+                <div class="col-lg-3 col-md-4 col-sm-6"><a href="images/prettysavage.gif" target="blank"><img
                         class="projects_art" src="images/prettysavage.gif" alt="Pretty Savage" /></a>
             </div>
-            <div class="col-lg-3 col-md-4 col-sm-6"><a href="https://imgur.com/4OvFIS8" target="blank"><img
+            <div class="col-lg-3 col-md-4 col-sm-6"><a href="images/charleeprof.png" target="blank"><img
                         class="projects_art" src="images/charleeprof.png" alt="OC Charlee" /></a>
             </div>
-            <div class="col-lg-3 col-md-4 col-sm-6"><a href="https://imgur.com/4Ad3Oim" target="blank"><img
-                        class="projects_art" src="images/noname.png" alt="OC Sam" /></a></div>
-            <div class="col-lg-3 col-md-4 col-sm-6"><a href="https://imgur.com/MF0dXry" target="blank"><img
+            <div class="col-lg-3 col-md-4 col-sm-6"><a href="images/1.jpg" target="blank"><img
                         class="projects_art" src="images/1.jpg" alt="Girl" /></a></div>
-            <div class="col-lg-3 col-md-4 col-sm-6"><a href="https://imgur.com/SOdIw9p" target="blank"><img
+            <div class="col-lg-3 col-md-4 col-sm-6"><a href="images/5.jpg" target="blank"><img
                         class="projects_art" src="images/5.jpg" alt="Wizard" /></a></div>
-            <div class="col-lg-3 col-md-4 col-sm-6"><a href="https://imgur.com/NMVwCGI" target="blank"><img
+            <div class="col-lg-3 col-md-4 col-sm-6"><a href="images/2.jpg" target="blank"><img
                         class="projects_art" src="images/2.jpg" alt="Forest" /></div>
         </div>
+</div>
     </div>
     </div>
     </div>
     </div>
     <footer>
         <div class="bottom_container">
-            <p><a><i class="far fa-copyright"> Copyrights Agata Jacyk</i></a></p>
+                <a href="https://github.com/AgataJacyk"><i class="fab fa-github-square nav_git"></i></a>
+                <a href="https://www.linkedin.com/in/agata-jacyk-486259219/"><i
+                        class="fab fa-linkedin nav_linked"></i></a>
+            <p><a><i class="far fa-copyright">
+                        Copyrights Agata Jacyk</i></a></p>
         </div>
     </footer>
 </body>
