--- a/index.html
+++ b/index.html
@@ -156,6 +156,12 @@
                 <div class="col-lg-7 col-sm-7">
                     <div class="row">
                         <div class="col-4">
+                            <p>01 / 2022 - 06 / 2022</p>
+                        </div>
+                        <div class="col-7">
+                            <p> Citomed</p>
+                        </div>
+                        <div class="col-4">
                             <p>10 / 2020 - 06 / 2021</p>
                         </div>
                         <div class="col-7">
