--- a/cv.html
+++ b/cv.html
@@ -135,6 +135,25 @@
                     <table>
                         <tbody>
                             <tr>
+                                <td class="table_small">01 / 2022 - 06 / 2022
+                                    <br> <b>Citomed</b>
+                                </td>
+                                <td>
+                                    <ul>
+                                        <li>
+                                            medical registration
+                                        </li>
+                                        <li>
+                                            contact with the customer
+                                        </li>
+                                        <li>
+                                            preparation of documentation
+                                        </li>
+                                    </ul>
+                                </td>
+                            </tr>
+                            <tr>
+                            <tr>
                                 <td class="table_small">10 / 2020 - 06 / 2021
                                     <br> <b>Excellent Office</b>
                                 </td>
