--- a/cv.html
+++ b/cv.html
@@ -293,6 +293,9 @@
                                         <li>
                                             Web Design
                                         </li>
+                                        <li>
+                                            Figma
+                                        </li>
                                     </ul>
                                 </td>
                                 <td>
