--- a/cv.html
+++ b/cv.html
@@ -83,23 +83,28 @@
             <div class="col-4">
                 <div class="personal_info">
                     <img class="my_photo" src="images/photo.png">
-                    <b>name</b>
+                    <b>Fullname</b>
                     <p>Agata Jacyk</p>
                     <b>phone number</b>
                     <p>(+48) 661-470-335</p>
                     <b>email</b>
-                    <p>agatajacyk.webdeveloper@gmail.com</p>
+                    <br>
+                    <a href="mailto:agatajacyk.webdeveloper@gmail.com">agatajacyk.webdeveloper@gmail.com</a>
                     <b>LinkedIn</b>
-                    <p>https://www.linkedin.com/in/agata-jacyk-486259219/"</p>
+                    <br>
+                    <a href="https://www.linkedin.com/in/agata-jacyk-486259219/">https://www.linkedin.com/in/agata-jacyk-486259219/</a>
+                   <br>
                     <b>GitHub</b>
-                    <p>https://github.com/AgataJacyk</p>
+                    <br>
+                    <a href="https://github.com/AgataJacyk">https://github.com/AgataJacyk</a>
                 </div>
                 <hr>
                 <div>
                     <b>Languages</b>
 
                     <p>Polish ( native )</p>
-                    <p>English ( B1 / B2 )</p>
+                    <p>English ( B2 )</p>
+                    <p>Spanish ( A1 )</p>
                     <p>Korean ( A1 )</p>
 
                 </div>
@@ -125,6 +130,8 @@
                 <hr>
                 <div>
                     <b>other</b>
+                    <b>1 / 13 / 2022</b>
+                    <p>Scholarship</p>
                     <b>1 / 10 / 2021</b>
                     <p>Class representative</p>
                 </div>
@@ -291,15 +298,24 @@
                                             Java Script (ES6)
                                         </li>
                                         <li>
-                                            Web Design
+                                            Figma
                                         </li>
                                         <li>
-                                            Figma
+                                            Canva
+                                        </li>
+                                        <li>
+                                            Gimp
                                         </li>
                                     </ul>
                                 </td>
                                 <td>
                                     <ul>
+                                        <li>
+                                            Web Design
+                                        </li>
+                                        <li>
+                                            Design patterns
+                                        </li>
                                         <li>
                                             SQL
                                         </li>
@@ -307,7 +323,7 @@
                                             MONGODB
                                         </li>
                                         <li>
-                                            GIT
+                                            GitHub
                                         </li>
                                     </ul>
                                 </td>
@@ -321,6 +337,12 @@
                                         </li>
                                         <li>
                                             Angular
+                                        </li>
+                                        <li>
+                                            Vue.js
+                                        </li>
+                                        <li>
+                                            Vuex
                                         </li>
                                     </ul>
                                 </td>
@@ -343,6 +365,9 @@
                 <div>
                     <h2>hobbies</h2>
                     <ul>
+                        <li>
+                            programming and web design
+                        </li>
                         <li>
                             art, drawing, digital art
                         </li>
