--- a/index.html
+++ b/index.html
@@ -118,31 +118,31 @@
                 Frontend gives me more pleasure than pure Java, and despite the ongoing course, I started to develop
                 more in
                 this direction. Below is a list of some of the skills I have learned.</p>
+                
             <div class="row skill_row">
                 <div class="col-4">
                     <p><b>HTML 5</b></p>
                     <p><b>CSS 3</b></p>
                     <p><b>JavaScript(ES6)</b></p>
+                    <p><b>Canva</b></p>
+                    <p><b>Figma</b></p>
+                    <p><b>Gimp</b></p>
                 </div>
                 <div class="col-4">
                     <p><b>Bootstrap 4/5</b></p>
                     <p><b>DOM Manipulation</b></p>
-                    <p><b>React.js</b></p>
+                    <p><b>Web Design</b></p>
+                    <p><b>Design patterns</b></p>
+                    <p><b>Mongodb</b></p>
+                    <p><b>SQL</b></p>
+                    <p><b>Github</b></p>
                 </div>
                 <div class="col-4">
                     <p><b>Node.js</b></p>
-                    <p><b>Web Design</b></p>
+                    <p><b>React.js</b></p>
+                    <p><b>Vue.js</b></p>
+                    <p><b>Vuex</b></p>
                     <p><b>Angular</b></p>
-                </div>
-                <div class="col-4">
-                    <p><b>Canva</b></p>
-                    <p><b>jQuery</b></p>
-                    <p><b>Mongodb</b></p>
-                </div>
-                <div class="col-4">
-                    <p><b>Design patterns</b></p>
-                    <p><b>SQL</b></p>
-                    <p><b>Github</b></p>
                 </div>
             </div>
             <p class="text-end"><a href="projects.html" class="right" target="blank">
@@ -221,7 +221,7 @@
                 <div class="col-lg-10 col-sm-6 hobbies">
                     <p>Ever since I can remember, I've loved drawing. As a little girl, I used to scribble everything
                         I could (seriously). My passion has developed over many years from <b>drawing, through
-                            various types of paints and other artistic materials</b>, to<a
+                            various types of paints and other artistic materials</b>, to <a
                             href="projects.html#digital_art" target="blank"><b>digital art</b></a>, which I started to
                         develop
                         this year. for some time I studied the <b>art</b> of tattooing, which also contributed to my
@@ -236,20 +236,13 @@
                     <p>I have already mentioned that <a href="https://github.com/AgataJacyk"
                             target="blank"><b>programming</b></a> was my passion but what was developing at the same
                         time was <b>writing</b>. I've always had a vivid <b>imagination</b> full of ideas (and
-                        fortunately
-                        there are still quite a few of them). I loved <b>creating</b> amazing stories of imaginary
+                        fortunately there are still quite a few of them). I loved <b>creating</b> amazing stories of imaginary
                         characters, plots on which you could build a pretty good movie and describe their everyday
-                        life
-                        in
-                        far too long essays. I thought about writing a book many times, but in the end I used the
-                        opportunities provided by<a href="https://pl.wikipedia.org/wiki/Play_by_forum" target=""><b>PBF
-                                (play by forum)</b></a> forums to create long stories together with
+                        life in far too long essays. I thought about writing a book many times, but in the end I used the
+                        opportunities provided by <a href="https://pl.wikipedia.org/wiki/Play_by_forum" target=""><b>PBF (play by forum)</b></a> forums to create long stories together with
                         other <b>people</b>. By the way, it was thanks to these people that I started designing
-                        websites
-                        and
-                        I gained the courage to show my works to others. I learned to accept constructive criticism
-                        and
-                        correct the mistakes pointed out.</p>
+                        websites and I gained the courage to show my works to others. I learned to accept constructive criticism
+                        and correct the mistakes pointed out.</p>
                 </div>
                 <div class="col-lg-2 col-sm-6"><img id="pc_img" , src="images/pc.png" ; alt="Desktop"></div>
 
