--- a/projects.html
+++ b/projects.html
@@ -87,6 +87,8 @@
                             class="projects" src="images/dicegame.gif" alt="DiceGame" /></a></div>
                 <div class="col-lg-3 col-md-4 col-sm-6"><a href="https://bedzie5.edu.pl/"><img class="projects"
                             src="images/bedzie5.gif" alt="Będzie5 website" /></a></div>
+                <div class="col-lg-3 col-md-4 col-sm-6"><a href="https://github.com/Olkens/pokeProjekt"><img class="projects"
+                            src="images/pokeAPI.gif" alt="PokeApi project" /></a></div>
             </div>
         <h3>Design</h3>
         <div class="row">
